// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`felaRenderer CSS fallback values are rendered 1`] = `
".a {
  color: red;
  color: blue;
}


<div className=ui-box a />;
"
`;

exports[`felaRenderer animations are not applied if animations are disabled 1`] = `
"

<div className=ui-provider dir=ltr>
  <div className=ui-box ui-animation />
</div>;
"
`;

exports[`felaRenderer array returned by keyframe results in CSS fallback values 1`] = `
"@-webkit-keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
@-moz-keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
@keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
.a {
  animation-name: k1;
}


<div className=ui-provider dir=ltr>
  <div className=ui-box ui-animation a />
</div>;
"
`;

exports[`felaRenderer basic styles are rendered 1`] = `
".a {
  color: red;
}


<div className=ui-box a />;
"
`;

exports[`felaRenderer keyframe colors are rendered 1`] = `
"@-webkit-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@-moz-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
.a {
  animation-name: k1;
}
.b {
  animation-duration: 5s;
}


<div className=ui-provider dir=ltr>
  <div className=ui-box ui-animation a b />
</div>;
"
`;

exports[`felaRenderer marginLeft is rendered into marginLeft due to RTL with \`noFlip\` 1`] = `
".a {
  margin-left: 10px; /* @noflip */
}


<div className=ui-provider dir=rtl>
  <span className=ui-text a dir=auto>
    Hello
  </span>
</div>;
"
`;

exports[`felaRenderer marginLeft is rendered into marginRight due to RTL 1`] = `
".a {
  margin-right: 10px;
}


<div className=ui-provider dir=rtl>
  <span className=ui-text a dir=auto>
    Hello
  </span>
</div>;
"
`;

exports[`felaRenderer styles are expanded to longhand values 1`] = `
".a {
  border-top-style: solid;
}
.b {
  border-right-style: solid;
}
.c {
  border-bottom-style: solid;
}
.d {
  border-left-style: solid;
}
.e {
  border-top-color: rgba(51, 204, 51, 1);
}
.f {
  border-right-color: rgba(51, 0, 204, 1);
}
.g {
  border-bottom-color: rgba(51, 204, 51, 1);
}
.h {
  border-left-color: rgba(51, 0, 204, 1);
}


<div className=ui-box a b c d e f g h />;
"
`;
